qa-leaflink/traefik.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: qa-leaflink
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v2.9
          args:
            - --api.insecure
            - --providers.kubernetesingress
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --entrypoints.websecure.http.tls
            - --providers.file.filename=/config/dyn.yaml
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
            - name: websecure
              containerPort: 443
          volumeMounts:
            - name: easltech-cert-volume
              mountPath: /certs
            - name: traefik-config-volume
              mountPath: /config
      volumes:
        - name: easltech-cert-volume
          secret:
            secretName: easltech-cert
        - name: traefik-config-volume
          configMap:
            name: traefik-config
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: qa-leaflink
spec:
  type: NodePort
  ports:
    - port: 30001
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: qa-leaflink
spec:
  type: NodePort
  ports:
    - targetPort: web
      port: 30002
      name: http
    - targetPort: websecure
      port: 30003
      name: https
  selector:
    app: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mgmt-ingress
  namespace: qa-leaflink
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: qa.mgmt.easltech.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: edx-mgmtui
            port:
              name: http
